# OpenGLPractice

./: CMakeLists.txt  Camera.h  Shader.h  basicShader.vert  main.cpp  stb_image.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt
shaders/: basicShader.frag  basicShader.vert
